--- a/quarkus-prototype/pom.xml
+++ b/quarkus-prototype/pom.xml
@@ -9,17 +9,16 @@
     <properties>
         <compiler-plugin.version>3.14.0</compiler-plugin.version>
         <maven.compiler.release>21</maven.compiler.release>
+        <surefire-plugin.version>3.5.2</surefire-plugin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.23.0</quarkus.platform.version>
+        <quarkus.platform.version>3.25.0</quarkus.platform.version>
 
         <skipITs>true</skipITs>
-
-        <surefire-plugin.version>3.5.2</surefire-plugin.version>
 
         <!-- dependency versions -->
 
@@ -123,6 +122,7 @@
     </build>
 
     <profiles>
+        <!-- When running the package goal with this profile, you get the native executable. -->
         <profile>
             <id>native</id>
             <activation>
